<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back3"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/questionnumber"
        android:text="@string/question_number"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SelectedOption"
            android:visibility="gone"
            android:id="@+id/selectoption"
            android:textAlignment="center"
            android:textColor="#ffffff"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Correct Answer"
            android:visibility="gone"
            android:id="@+id/correctanswer"
            android:textAlignment="center"
            android:textColor="#ffffff"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:fontFamily="@font/font2"
            android:textColor="@color/black"
            android:textSize="25sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FirstTwoOption"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionA"
            android:text="@string/question1_A"
            android:background="@drawable/optiondesign"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:paddingTop="14dp"
            />
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionB"
            android:text="@string/question1_B"
            android:background="@drawable/optiondesign"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:paddingTop="14dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RemainingTwoOption"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionC"
            android:text="@string/question1_c"
            android:background="@drawable/optiondesign"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:paddingTop="14dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionD"
            android:text="@string/question1_D"
            android:background="@drawable/optiondesign"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:paddingTop="14dp"
            android:layout_marginTop="10dp"
            />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/score"
            android:padding="10dp"/>

        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffa384"
            android:layout_gravity="bottom"
            android:id="@+id/progressbar"
            style="android:style/widget.ProgressBar.Horizontal "
            android:indeterminate="false"/>




    </LinearLayout>

</LinearLayout>